--- a/rolam.html
+++ b/rolam.html
@@ -33,13 +33,21 @@
                     </div>
                 </div>
             </div>
+            <div class="stop"></div>
             <div class="textContainer">
                 <h1 class="cim">Koós-Hutás Áron</h1>
-                <p>
+                <button class="btn btn-primary angol">English</button>
+                <button class="btn btn-primary magyar">Magyar</button>
+                <p class="magyarSzoveg">
                     Napjaink egyik legkeresettebb fiatal trombitása 2008-ban megnyerte a Tomsits Rudolf Jazz Trombita Tehetségkutató Versenyét. Koós-Hutás Áron neve sokak számára már más produkciókból is ismerős lehet, úgy mint a neves Budapest Jazz Orchestra, a vilagszerte turnezo Djabe jazz-world egyuttes az underground körökben ismert Pannonia Allstars Ska Orchestra vagy a balkán zenét játszó Guca Partyzans Brass Band. 
                     A legismertebb magyar előadók mellett az évek során lehetősége volt már több, nemzetközileg is ismert művésszel dolgozni és egy színpadra állni, beleértve
                     többek között Brian Culbertson-t, Tony Lakatost, Erik Truffaz-t, Steve Hackette-t, Gerard Presencer-t, Joe Lovano-t, Joan Faulkner-t és Raul Midónt. 2014-ben hazánkat képviselte az I. világháború 100. évfordulójára létrehozott nemzetközi nagyszabású kezdeményezésben, melyre a híres olasz jazztrombitás, Paolo Fresu kérte fel. 
                     Koós-Hutás Áront 2015-ben az év jazztrombitásának választotta a JazzMa.hu közönsége, 2015-ben megjelenő első lemezének dala, a ‘Milk and Honey’ a Jazzy Dalverseny díjazottjai között szerepelt, lemezét a világhírű Kenny Garrett Quintet előtt mutathatta be a nagyközönségnek, 2017 májusában pedig E.T. Projectjével a németországi Gronau JazzFest nagyszínpadán a világhírű Till Brönner előtt mutatkozhatott be az európai nagyközönségnek. Szolistakent meghivast kapott a Mezzoforte 40. szuletesnapi turnejanak budapesti allomasara az A38 hajora.
+                </p>
+                <p class="angolSzoveg">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ut augue sit amet mauris mattis posuere ut vitae nunc. Praesent faucibus justo enim, vitae eleifend eros imperdiet ac. Ut mauris lorem, dictum nec suscipit et, luctus eget augue. Quisque sit amet eros id odio malesuada porttitor eu ac purus. Proin elementum urna non bibendum hendrerit. Vestibulum in feugiat lacus. Phasellus vitae nibh eu massa egestas feugiat. Aliquam erat volutpat. Curabitur et commodo risus. Fusce aliquet magna eget scelerisque volutpat.
+
+                    Vestibulum at ex tortor. Pellentesque ac velit nulla. Morbi faucibus elit eget neque ornare, in egestas enim egestas. Suspendisse elementum a est quis congue. Sed faucibus felis ligula, quis commodo ligula molestie in. Sed ornare nisl sem, vel facilisis dui faucibus id. Suspendisse potenti. Suspendisse metus ex, auctor nec fermentum quis, venenatis nec nunc. In hac habitasse platea dictumst. Aenean at posuere orci. 
                 </p>
             </div>
             <div class="row">
